2001-11-05  Kevin Vandersloot <kfv101@psu.edu>

	bring back hidden processes

	* callbacks.c: restore callbacks to hide processes

	* favorites.c: bring back all this. port to gconf and
	treeview. Remove any favorites stuff. I should change the name
	of the file now

	* interface.c: bring back menu items.

	* procdialogs.c: port hide dialog to GtkDialog

	* procman.c: save and get blacklist. Remove gconf notification
	as I'm not using it at the moment.

	* proctable.c: bring back the checking to see if a process has
	been blacklisted etc 

2001-11-05  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: fix bug to get root stuff back that I 
	introduced

2001-11-04  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: bring back some keybindings

	* proctable.c: same here

2001-11-04  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: no longer need to link to pthread stuff

	* callbacks.c: double click toggles info tab

	* prettytable.c: work with libwnck

	* procactions.c: bring back root dialog stuff but doesn't seem
	to work

2001-10-31  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: some porting to GtkDialog

2001-10-31  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: hook up the widgets with mnemonics. This
	is so much easier in Gtk 2.0 :) Also get the sensitivity stuff
	right

	* callbacks.c: minor fixes

2001-10-29  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: mkae renice actually work

2001-10-29  Kevin Vandersloot <kfv101@psu.edu>

	Too many changes to detail. Use libwnck to get icons. Return
	memmaps, popup menu, get sorting right, bring back dialogs.

2001-10-03  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: bring back the dialogs

	* procactions.c: update to use the procdata->selected_process
	instead of selected_node

	* interface.c: bring back some menuitems

	* callbacks.c: bring back killing processes and renice and 
	prefs dialog

2001-10-02  Kevin Vandersloot <kfv101@psu.edu>
