@@ -1,3 +1,12 @@
+2001-11-06  Kevin Vandersloot <kfv101@psu.edu>
+
+	save and restore tree state
+
+	* procman.c: new functions to save and restore the tree state
+	using gconf
+
+	* proctable.c: call the new function
+
 2001-11-05  Kevin Vandersloot <kfv101@psu.edu>
 
 	bring back hidden processes
